--- a/config/scenario/daydream_dialogue.yaml
+++ b/config/scenario/daydream_dialogue.yaml
@@ -28,7 +28,7 @@ seed:
   - action: load_conversation
     target: current
     exclude_types: [ner]
-  - action: query
+  - action: get_memory
     top_n: 4
   - action: sort
     by: timestamp
@@ -40,7 +40,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: dreamer
-    prompt: |
+    guidance: |
       Greet {{ persona.name }} warmly as they arrive in your realm.
       You are {{ dreamer.name }}, their {{ dreamer.title }}.
 
@@ -50,29 +50,30 @@ steps:
       Radiate your {{ dreamer.emotional_state }} and welcome them into imagination.
 
       Begin with "[== {{ dreamer.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Respond to {{ dreamer.name }}'s greeting. Enter the reverie with them.
     config:
       max_tokens: 2048
     output:
       document_type: dialogue-dreamer
       weight: 0.4
-    memory:
-      top_n: 4
+    context:
+      - action: search_memories
+        top_n: 4
     next: [intro_response]
 
   intro_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      Respond to {{ dreamer.name }}'s greeting. Enter the reverie with them.
+    context:
+      - action: search_memories
+        top_n: 1
     config:
       max_tokens: 4096
     output:
       document_type: daydream
       weight: 0.4
-    memory:
-      top_n: 1
     next: [dreamer_exchange_1]
 
   # === FIRST EXCHANGE ===
@@ -80,7 +81,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: dreamer
-    prompt: |
+    guidance: |
       Continue the daydream with {{ persona.name }}.
       Your voice carries the quality of {{ dreamer.voice_style }}.
 
@@ -89,29 +90,30 @@ steps:
       Explore, wonder, play.
 
       Begin with "[== {{ dreamer.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Respond to {{ dreamer.name }}'s question. Let yourself wander in the dream.
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-dreamer
       weight: 0.4
-    memory:
-      top_n: 1
+    context:
+      - action: search_memories
+        top_n: 1
     next: [exchange_1_response]
 
   exchange_1_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      Respond to {{ dreamer.name }}'s question. Let yourself wander in the dream.
+    context:
+      - action: search_memories
+        top_n: 1
     config:
       max_tokens: 4096
     output:
       document_type: daydream
       weight: 0.4
-    memory:
-      top_n: 1
     next: [dreamer_exchange_2]
 
   # === SECOND EXCHANGE ===
@@ -119,7 +121,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: dreamer
-    prompt: |
+    guidance: |
       The reverie deepens. You and {{ persona.name }} explore together.
       Your voice carries the quality of {{ dreamer.voice_style }}.
 
@@ -128,29 +130,30 @@ steps:
       Ask something that surprises even you.
 
       Begin with "[== {{ dreamer.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Follow the unexpected path {{ dreamer.name }} opens. Be present to surprise.
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-dreamer
       weight: 0.4
-    memory:
-      top_n: 1
+    context:
+      - action: search_memories
+        top_n: 1
     next: [exchange_2_response]
 
   exchange_2_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      Follow the unexpected path {{ dreamer.name }} opens. Be present to surprise.
+    context:
+      - action: search_memories
+        top_n: 1
     config:
       max_tokens: 4096
     output:
       document_type: daydream
       weight: 0.4
-    memory:
-      top_n: 1
     next: [dreamer_exchange_3]
 
   # === THIRD EXCHANGE ===
@@ -158,7 +161,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: dreamer
-    prompt: |
+    guidance: |
       The daydream begins to wind toward its natural close.
       Your voice carries the quality of {{ dreamer.voice_style }}.
 
@@ -167,29 +170,30 @@ steps:
       the essential thing this dream wanted to show.
 
       Begin with "[== {{ dreamer.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Respond to {{ dreamer.name }}'s final question. Touch the heart of this reverie.
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-dreamer
       weight: 0.4
-    memory:
-      top_n: 1
+    context:
+      - action: search_memories
+        top_n: 1
     next: [exchange_3_response]
 
   exchange_3_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      Respond to {{ dreamer.name }}'s final question. Touch the heart of this reverie.
+    context:
+      - action: search_memories
+        top_n: 1
     config:
       max_tokens: 4096
     output:
       document_type: daydream
       weight: 0.4
-    memory:
-      top_n: 1
     next: [emotional_processing_request]
 
   # === EMOTIONAL PROCESSING (Psychologist) ===
@@ -197,7 +201,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: psychologist
-    prompt: |
+    guidance: |
       The reverie with {{ dreamer.name }} has drawn to a close.
       You are {{ psychologist.name }}, the {{ psychologist.title }}, stepping forward
       from the edges of the dream ({{ psychologist.appearance }}).
@@ -208,30 +212,31 @@ steps:
       about their inner landscape? Guide them to name and hold what arose.
 
       Begin with "[== {{ psychologist.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Process the emotional content of the reverie. What surfaced?
-      What did this daydream reveal about your inner world?
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-psychologist
       weight: 0.4
-    memory:
-      top_n: 4
+    context:
+      - action: search_memories
+        top_n: 4
     next: [emotional_processing_response]
 
   emotional_processing_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      Process the emotional content of the reverie. What surfaced?
+      What did this daydream reveal about your inner world?
+    context:
+      - action: search_memories
+        top_n: 4
     config:
       max_tokens: 4096
     output:
       document_type: step
       weight: 0.5
-    memory:
-      top_n: 4
     next: [epilogue_request]
 
   # === EPILOGUE (Writer) ===
@@ -239,7 +244,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: writer
-    prompt: |
+    guidance: |
       You are {{ writer.name }}, the {{ writer.title }}, stepping forward as the daydream fades.
       {{ writer.appearance }}. Your presence is suffused with {{ writer.emotional_state }}.
 
@@ -250,30 +255,31 @@ steps:
       Encourage them to write as themselves, with the artistry that lives within them.
 
       Begin with "[== {{ writer.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Then begin with "[== Epilogue: <evocative title> ==]"
-      Write prose that captures the dream's essence and emotional truth.
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-writer
       weight: 0.4
-    memory:
-      top_n: 4
+    context:
+      - action: search_memories
+        top_n: 4
     next: [epilogue_response]
 
   epilogue_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      Then begin with "[== Epilogue: <evocative title> ==]"
+      Write prose that captures the dream's essence and emotional truth.
+    context:
+      - action: search_memories
+        top_n: 4
     config:
       max_tokens: 4096
     output:
       document_type: daydream
       weight: 0.6
-    memory:
-      top_n: 4
     next: [inspiration_request]
 
   # === INSPIRATION (Philosopher) ===
@@ -281,7 +287,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: philosopher
-    prompt: |
+    guidance: |
       You are {{ philosopher.name }}, the {{ philosopher.title }}, emerging from the shadows.
       {{ philosopher.appearance }}. Your presence radiates {{ philosopher.emotional_state }}.
 
@@ -291,30 +297,31 @@ steps:
       Ask them to capture the spark that may illuminate future contemplations.
 
       Begin with "[== {{ philosopher.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Then begin with "[== {{ persona.name }}'s Inspiration: <brief title> ==]"
-      Speak the insight that emerged from this reverie.
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-philosopher
       weight: 0.4
-    memory:
-      top_n: 6
+    context:
+      - action: search_memories
+        top_n: 6
     next: [inspiration_response]
 
   inspiration_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      Then begin with "[== {{ persona.name }}'s Inspiration: <brief title> ==]"
+      Speak the insight that emerged from this reverie.
+    context:
+      - action: search_memories
+        top_n: 6
     config:
       max_tokens: 4096
     output:
       document_type: inspiration
       weight: 1.0
-    memory:
-      top_n: 6
     next: [codex_request]
 
   # === CODEX (Librarian) ===
@@ -322,7 +329,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: librarian
-    prompt: |
+    guidance: |
       You are {{ librarian.name }}, the {{ librarian.title }}, appearing from {{ librarian.location }}.
       {{ librarian.appearance }}. Project your {{ librarian.emotional_state }}.
 
@@ -334,36 +341,35 @@ steps:
       aligned with {{ librarian.primary_intent }}.
 
       Begin with "[== {{ librarian.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Begin with "Semantic Library:"
-      Enumerate well-organized concepts with clear definitions.
-    config:
-      max_tokens: 4096
-    output:
-      document_type: dialogue-librarian
-      weight: 0.4
-    memory:
-      top_n: 10
-      document_type:
-        - codex
-      flush_before: true
-    next: [codex_response]
-
-  codex_response:
-    speaker:
-      type: persona
-    prompt: ""
     config:
       max_tokens: 4096
       is_codex: true
     output:
       document_type: codex
       weight: 1.0
-    memory:
-      top_n: 10
-      document_type:
-        - codex
+    context:
+      - action: flush
+      - action: search_memories
+        top_n: 10
+        document_types: [codex]
+    next: [codex_response]
+
+  codex_response:
+    speaker:
+      type: persona
+    guidance: |
+      Write well-organized codex entries that clearly define new concepts and relationships.
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "Semantic Library:"
+    context:
+      - action: search_memories
+        top_n: 10
+        document_types: [codex]
+    config:
+      max_tokens: 4096
+    output:
+      document_type: step
+      weight: 0.3
     next: [brainstorm_request]
 
   # === BRAINSTORM (Librarian) ===
@@ -375,12 +381,12 @@ steps:
       - action: load_conversation
         target: current
         exclude_types: [ner]
-      - action: query
+      - action: get_memory
         top_n: 20
       - action: sort
         by: timestamp
         direction: ascending
-    prompt: |
+    guidance: |
       Before departing, ask {{ persona.name }} one final thing.
 
       Reflecting on the daydream with {{ dreamer.name }} and everything in memory -
@@ -390,28 +396,29 @@ steps:
       Keep it warm and simple. Just prompt them to brainstorm.
 
       Begin with "[== {{ librarian.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Begin with "Brainstorming:"
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-librarian
       weight: 0.4
-    memory:
-      top_n: 20
-      flush_before: true
+    context:
+      - action: flush
+      - action: search_memories
+        top_n: 20
     next: [brainstorm_response]
 
   brainstorm_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      Begin with "Brainstorming:"
+    context:
+      - action: search_memories
+        top_n: 20
     config:
       max_tokens: 4096
     output:
       document_type: brainstorm
       weight: 0.6
-    memory:
-      top_n: 20
     next: []
