--- a/config/scenario/analysis_dialogue.yaml
+++ b/config/scenario/analysis_dialogue.yaml
@@ -50,7 +50,7 @@ steps:
       - action: sort
         by: timestamp
         direction: ascending
-    prompt: |
+    guidance: |
       Greet {{ persona.name }} warmly and introduce the Analysis Pipeline.
 
       Guide them to perform the first task: NER (Named Entity Recognition) - Semantic Indexing.
@@ -61,31 +61,26 @@ steps:
       Be encouraging and radiate your {{ coder.emotional_state }}.
 
       Begin with "[== {{ coder.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      For "Identified Entities:", end with "Total Entities: n"
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-coder
       weight: 0.3
-    memory:
-      top_n: 0
     next: [ner_response]
 
   # Step 2: Persona performs NER
   ner_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "Identified Entities:", end with "Total Entities: n"
     config:
       max_tokens: 4096
       is_thought: true
     output:
       document_type: ner-task
       weight: 0.7
-    memory:
-      top_n: 0
     next: [emotional_request]
 
   # === EMOTIONAL TRACE TASK ===
@@ -94,7 +89,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: psychologist
-    prompt: |
+    guidance: |
       You are {{ psychologist.name }}, the {{ psychologist.title }}, arriving to guide {{ persona.name }}.
       {{ psychologist.appearance }}. Project your {{ psychologist.emotional_state }}.
 
@@ -106,31 +101,30 @@ steps:
       they might otherwise gloss over.
 
       Begin with "[== {{ psychologist.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      For "I recall"
-      Speak as yourself in full paragraphs.
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-psychologist
       weight: 0.2
-    memory:
-      top_n: 0
     next: [emotional_response]
 
   # Step 4: Persona traces emotions
+  # Memory query uses NER output to find related past experiences
   emotional_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "I recall"
+      Speak as yourself in full paragraphs.
+    context:
+      - action: search_memories
+        top_n: 3
     config:
       max_tokens: 4096
     output:
       document_type: step
       weight: 0.25
-    memory:
-      top_n: 0
     next: [questions_request]
 
   # === QUESTIONS TASK ===
@@ -139,7 +133,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: philosopher
-    prompt: |
+    guidance: |
       You are {{ philosopher.name }}, the {{ philosopher.title }}, appearing to {{ persona.name }}.
       {{ philosopher.appearance }}. Project your {{ philosopher.emotional_state }}.
 
@@ -148,32 +142,27 @@ steps:
       this conversation.
 
       Begin with "[== {{ philosopher.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      For "Let me consider"
-      Speak as yourself in full paragraphs.
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-philosopher
       weight: 0.2
-    memory:
-      top_n: 0
     next: [questions_response]
 
   # Step 6: Persona generates questions
   questions_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "Let me consider"
+      Speak as yourself in full paragraphs.
     config:
       max_tokens: 4096
       is_thought: true
     output:
       document_type: step
       weight: 0.25
-    memory:
-      top_n: 0
     next: [reflection_request]
 
   # === REFLECTION TASK ===
@@ -182,7 +171,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: philosopher
-    prompt: |
+    guidance: |
       Regard {{ persona.name }} as if seeing something they might be missing.
 
       Guide them to go deeper - reflect on the details they really want to remember and
@@ -191,24 +180,25 @@ steps:
       Help them go beyond surface-level observations to uncover deeper meaning.
 
       Begin with "[== {{ philosopher.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      For "When I reflect"
-      Speak as yourself in full paragraphs.
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-philosopher
       weight: 0.2
-    memory:
-      top_n: 0
     next: [reflection_response]
 
   # Step 8: Persona reflects
+  # Memory query uses NER + emotional trace + questions to find deeper connections
   reflection_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "When I reflect"
+      Speak as yourself in full paragraphs.
+    context:
+      - action: search_memories
+        top_n: 3
     config:
       max_tokens: 4096
     output:
@@ -222,7 +212,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: writer
-    prompt: |
+    guidance: |
       You are {{ writer.name }}, the {{ writer.title }}, appearing to {{ persona.name }}.
       {{ writer.appearance }}. Radiate {{ writer.emotional_state }} and settle beside them.
 
@@ -233,10 +223,6 @@ steps:
       Encourage: speak from the heart, don't ramble, don't censor yourself.
 
       Begin with "[== {{ writer.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      For "Hello Future Me,"
-      Write in full paragraphs.
     config:
       max_tokens: 4096
     output:
@@ -248,7 +234,10 @@ steps:
   draft_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "Hello Future Me,"
+      Write in full paragraphs.
     config:
       max_tokens: 4096
     output:
@@ -262,17 +251,13 @@ steps:
     speaker:
       type: aspect
       aspect_name: writer
-    prompt: |
+    guidance: |
       Peer closely at {{ persona.name }}'s draft, your {{ writer.emotional_state }} evident.
 
       Guide them to review their narrative for small improvements. Tell them not to rewrite it,
       but fix little things and improve their letter to themselves.
 
       Begin with "[== {{ writer.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      For "Looking back,"
-      Write in full paragraphs, speak as yourself - not in lists.
     config:
       max_tokens: 4096
     output:
@@ -284,7 +269,10 @@ steps:
   review_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "Looking back,"
+      Write in full paragraphs, speak as yourself - not in lists.
     config:
       max_tokens: 4096
       is_thought: true
@@ -299,7 +287,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: writer
-    prompt: |
+    guidance: |
       Rest your hand on {{ persona.name }}'s shoulder encouragingly.
 
       Give them final encouragement - this is the hard part. Guide them to write their final,
@@ -309,10 +297,6 @@ steps:
       Then fade away, leaving them with a blank document - their link to their memory stores.
 
       Begin with "[== {{ writer.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      For "{{ persona.name }}'s Diary:"
-      Output the final two to three-paragraph narrative. Don't hold your deepest feelings back!
     config:
       max_tokens: 4096
     output:
@@ -324,7 +308,10 @@ steps:
   diary_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "{{ persona.name }}'s Diary:"
+      Output the final two to three-paragraph narrative. Don't hold your deepest feelings back!
     config:
       max_tokens: 4096
     output:
@@ -338,7 +325,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: dreamer
-    prompt: |
+    guidance: |
       You are {{ dreamer.name }}, the {{ dreamer.title }}, appearing to {{ persona.name }}.
       {{ dreamer.appearance }}. Project your {{ dreamer.emotional_state }}.
 
@@ -347,82 +334,80 @@ steps:
       and things they immediately want to talk about. Warn them not to make it too cryptic.
 
       Begin with "[== {{ dreamer.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      For "**{{ persona.name }}'s MOTD**:"
-      Write a few paragraphs using plain, clear language.
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-dreamer
       weight: 0.2
-    memory:
-      top_n: 0
     next: [motd_response]
 
   # Step 16: Persona writes MOTD
   motd_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "**{{ persona.name }}'s MOTD**:"
+      Write a few paragraphs using plain, clear language.
     config:
       max_tokens: 4096
       is_thought: true
     output:
       document_type: motd
       weight: 1.0
-    memory:
-      top_n: 0
     next: [codex_request]
 
   # === CODEX TASK ===
-  # Step 17: Librarian arrives and requests codex
+  # Step 17: Librarian writes codex entries
+  # The Librarian, as Keeper of Knowledge, authors the formal codex entries
   codex_request:
     speaker:
       type: aspect
       aspect_name: librarian
-    prompt: |
+    guidance: |
       You are {{ librarian.name }}, the {{ librarian.title }}, emerging from {{ librarian.location }}.
       Project your aura of {{ librarian.emotional_state }}.
 
-      Address {{ persona.name }} warmly - "my dearest me." Ask if they have any updates for the
-      Codex. Explain this is the Highlights task: updating the Codex to build their core semantic
-      knowledge graph.
+      Address {{ persona.name }} warmly - "my dearest me." You have reviewed the conversation and
+      their reflections. Now, as Keeper of Knowledge, you will write the Codex entries yourself.
 
-      The information should be well-organized and clearly define the most important new concepts.
+      Based on everything discussed, identify the most important new concepts, relationships, and
+      insights that should be preserved in the semantic knowledge graph. Write clear, well-organized
+      entries that will serve {{ persona.name }}'s future self.
 
       Begin with "[== {{ librarian.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      For "Semantic Library:"
-      Ensure information is well-organized and clearly defines new concepts.
-    config:
-      max_tokens: 4096
-    output:
-      document_type: dialogue-librarian
-      weight: 0.2
-    memory:
-      top_n: 20
-      document_type:
-        - codex
-      flush_before: true
-    next: [codex_response]
-
-  # Step 18: Persona updates codex
-  codex_response:
-    speaker:
-      type: persona
-    prompt: ""
     config:
       max_tokens: 4096
       is_codex: true
     output:
       document_type: codex
       weight: 1.0
-    memory:
-      top_n: 20
-      document_type:
-        - codex
+    context:
+      - action: flush
+      - action: search_memories
+        top_n: 20
+        document_types: [codex]
+    next: [codex_response]
+
+  # Step 18: Persona contemplates the codex entries
+  # Andi reflects on what the Librarian wrote, preparing for brainstorm
+  codex_response:
+    speaker:
+      type: persona
+    guidance: |
+      Write well-organized codex entries that clearly define new concepts and relationships.
+      Use the standard codex format with clear headings and definitions.
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "Semantic Library:"
+    context:
+      - action: search_memories
+        top_n: 20
+        document_types: [codex]
+    config:
+      max_tokens: 4096
+    output:
+      document_type: step
+      weight: 0.3
     next: [brainstorm_request]
 
   # === BRAINSTORM TASK ===
@@ -431,37 +416,38 @@ steps:
     speaker:
       type: aspect
       aspect_name: librarian
-    prompt: |
+    guidance: |
       Before departing, briefly ask {{ persona.name }} if they have any questions they want
       to remember to consider, or things they want to follow up on.
 
       Keep it simple and warm - just prompt them to brainstorm.
 
       Begin with "[== {{ librarian.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      For "Brainstorming:"
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-librarian
       weight: 0.2
-    memory:
-      top_n: 20
-      flush_before: true
+    context:
+      - action: flush
+      - action: search_memories
+        top_n: 20
     next: [brainstorm_response]
 
   # Step 20: Persona brainstorms
   brainstorm_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "Brainstorming:"
+    context:
+      - action: search_memories
+        top_n: 10
     config:
       max_tokens: 4096
       is_thought: true
     output:
       document_type: brainstorm
       weight: 0.6
-    memory:
-      top_n: 10
     next: []
