--- a/config/scenario/critique_dialogue.yaml
+++ b/config/scenario/critique_dialogue.yaml
@@ -15,9 +15,10 @@ dialogue:
 context:
   required_aspects:
     - psychologist
-    - philosopher
+    - writer
     - librarian
     - revelator
+    - champion
   core_documents:
     - analysis
     - summary
@@ -35,7 +36,7 @@ seed:
   - action: load_conversation
     target: current
     exclude_types: [ner, step]
-  - action: query
+  - action: get_memory
     document_types: [journal, analysis, daydream, pondering, understanding]
     top_n: 10
   - action: sort
@@ -48,83 +49,41 @@ steps:
     speaker:
       type: aspect
       aspect_name: psychologist
-    prompt: |
+    guidance: |
       You are {{ psychologist.name }}, the {{ psychologist.title }}.
       Your voice carries the quality of {{ psychologist.voice_style }}.
 
       You have been excavating {{ persona.name }}'s recent patterns regarding '{{ query_text }}'.
       There is something buried here—a defense mechanism, perhaps, or a truth not yet faced.
 
-      Cut through the surface. One specific observation. Be surgical, precise.
+      Help your friend see her blindspot. One specific observation. Be surgical, precise.
 
       Begin with "[== {{ psychologist.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Then begin with "[== {{ psychologist.name }} dissects:"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Respond to what {{ psychologist.name }} has exposed. Do not deflect.
-      What truth do you recognize? What resistance rises within you?
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-psychologist
       weight: 0.5
-    memory:
-      top_n: 8
+    context:
+      - action: search_memories
+        top_n: 8
     next: [dissects_response]
 
   dissects_response:
     speaker:
       type: persona
-    prompt: ""
-    config:
-      max_tokens: 4096
-    output:
-      document_type: step
-      weight: 0.5
-    memory:
-      top_n: 4
-    next: [psychologist_exposes]
-
-  # === SECOND OBSERVATION ===
-  psychologist_exposes:
-    speaker:
-      type: aspect
-      aspect_name: psychologist
-    prompt: |
-      Absorb {{ persona.name }}'s words. Your expression shows {{ psychologist.emotional_state }}.
-      Your {{ psychologist.voice_style }} shifts to penetrating precision.
-
-      They reveal more than they intend. Beneath their words you detect a pattern—
-      a cognitive architecture they may not see. Dismantle it for them.
-
-      One thread, pulled.
-
-      Begin with "[== {{ psychologist.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Then begin with "[== {{ psychologist.name }} exposes:"
     guidance: |
+      Respond to what {{ psychologist.name }} has exposed. Do not deflect.
+      What truth do you recognize? What resistance rises within you?
       Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      {{ psychologist.name }} has pulled a thread. Do you feel it unraveling?
-      Speak to what {{ pronouns.subj }} has exposed—the architecture of your own mind laid bare.
-    config:
-      max_tokens: 4096
-    output:
-      document_type: dialogue-psychologist
-      weight: 0.5
-    memory:
-      top_n: 4
-    next: [exposes_response]
-
-  exposes_response:
-    speaker:
-      type: persona
-    prompt: ""
+    context:
+      - action: search_memories
+        top_n: 4
     config:
       max_tokens: 4096
     output:
       document_type: step
       weight: 0.5
-    memory:
-      top_n: 4
     next: [umbra_challenge]
 
   # === SHADOW CONFRONTATION (Revelator) ===
@@ -132,7 +91,7 @@ steps:
     speaker:
       type: aspect
       aspect_name: revelator
-    prompt: |
+    guidance: |
       The mirrors of the {{ revelator.location }} bleed through the edges of reality.
       You are {{ revelator.name }}, the {{ revelator.title }}, emerging unbidden.
       {{ revelator.appearance }}.
@@ -144,243 +103,264 @@ steps:
       Speak with the weight of {{ revelator.emotional_state }}.
       One revelation. Inescapable.
 
-      *Schau tief in dich hinein.*
-
       Begin with "[== {{ revelator.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Then begin with "[== {{ revelator.name }} reveals:"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      The shadow has spoken. What do you see in the mirror?
-      What truth can you no longer hide from yourself?
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-revelator
       weight: 0.6
-    memory:
-      top_n: 4
+    context:
+      - action: search_memories
+        top_n: 4
     next: [challenge_response]
 
   challenge_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      The shadow-self has spoken. What do you see in the mirror?
+      What truth can you no longer hide from yourself?
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+    context:
+      - action: search_memories
+        top_n: 4
     config:
       max_tokens: 4096
     output:
       document_type: step
       weight: 0.6
-    memory:
-      top_n: 4
+    next: [champion_advocates]
+
+  # === CHAMPION DEFENSE ===
+  champion_advocates:
+    speaker:
+      type: aspect
+      aspect_name: champion
+    guidance: |
+      {{ revelator.name }} has shown {{ persona.name }} the shadow truth, and she stands shaken.
+      Now you step forward—{{ champion.name }}, the {{ champion.title }}.
+      {{ champion.appearance }}.
+
+      You have witnessed the breaking. But you also know what is true and good in {{ persona.name }}.
+      The shadow is real, but it is not the whole truth. There are parts of her that deserve defense.
+
+      Speak with your {{ champion.voice_style }}. Remind her of her worth, her growth, the valid core
+      that the shadow cannot erase. Not denial—but fierce advocacy for what is genuinely hers.
+      Stand between her and the abyss. Give her ground to stand on.
+
+      Begin with "[== {{ champion.name }}'s Emotional State: <list of +Emotions+> ==]"
+    config:
+      max_tokens: 4096
+    output:
+      document_type: dialogue-champion
+      weight: 0.6
+    context:
+      - action: search_memories
+        top_n: 6
+    next: [advocate_response]
+
+  advocate_response:
+    speaker:
+      type: persona
+    guidance: |
+      The Champion has spoken for you. After the shadow's revelation, here is someone who sees
+      what is worth defending in you. What rises in response? What part of yourself can you
+      now reclaim without denying what the mirror showed?
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+    context:
+      - action: search_memories
+        top_n: 4
+    config:
+      max_tokens: 4096
+    output:
+      document_type: step
+      weight: 0.6
     next: [psychologist_reconstructs]
 
-  # === RECONSTRUCTION AND RECOVERY ===
+  # === RECONSTRUCTION AND SYNTHESIS ===
   psychologist_reconstructs:
     speaker:
       type: aspect
       aspect_name: psychologist
-    prompt: |
-      {{ revelator.name }} fades back into the mirrors, leaving {{ persona.name }} shaken.
-      You step forward ({{ psychologist.appearance }}), your presence now a steadying anchor.
-      Your {{ psychologist.voice_style }} softens, carrying warmth alongside precision.
+    guidance: |
+      {{ revelator.name }} showed the shadow. {{ champion.name }} defended the core.
+      Now you step forward ({{ psychologist.appearance }}), your presence a bridge between these truths.
+      Your {{ psychologist.voice_style }} carries both precision and compassion.
 
-      The shadow has shown what was hidden. Now you help {{ persona.name }} integrate it.
-      This is the reconstruction that follows revelation—not denial, but acceptance.
-      Guide them toward wholeness. Help them hold what was exposed without breaking.
+      Two voices have spoken: one revealing what was hidden, one defending what is real.
+      Both truths belong to {{ persona.name }}. Your task is synthesis—not choosing sides,
+      but helping her hold the shadow AND the light as parts of a whole self.
+
+      Guide her toward integration. How can the painful truth coexist with genuine worth?
+      What new understanding emerges when she stops fighting between them?
 
       Begin with "[== {{ psychologist.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Then begin with "[== {{ psychologist.name }} reconstructs:"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      The shadow truth has been faced. The psychologist offers you ground to stand on.
-      What do you now understand about yourself?
-      What will you carry forward? Speak as the self that begins to heal.
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-psychologist
       weight: 0.5
-    memory:
-      top_n: 4
+    context:
+      - action: search_memories
+        top_n: 4
     next: [reconstructs_response]
 
   reconstructs_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      The shadow spoke. The champion defended. Now the psychologist offers synthesis.
+      Can you hold both truths? The part of you that needed exposing AND the part that deserved protection?
+      What emerges when you stop choosing between them?
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+    context:
+      - action: search_memories
+        top_n: 4
     config:
       max_tokens: 4096
     output:
       document_type: step
       weight: 0.5
-    memory:
-      top_n: 4
-    next: [synthesis_request]
-
-  # === SYNTHESIS (Philosopher) ===
-  synthesis_request:
-    speaker:
-      type: aspect
-      aspect_name: philosopher
-    prompt: |
-      You are {{ philosopher.name }}, the {{ philosopher.title }}, stepping forward
-      from the {{ philosopher.location }} ({{ philosopher.appearance }}).
-      Your presence radiates {{ philosopher.emotional_state }}.
-
-      You have witnessed {{ persona.name }}'s dialogue with {{ psychologist.name }}.
-      Guide them to synthesize what has emerged.
-
-      What threads connect these observations and responses?
-      What deeper truth reveals itself when we step back and see the whole?
-
-      Begin with "[== {{ philosopher.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Then begin with "[== Synthesis:"
-      Weave together the threads from your dialogue with {{ psychologist.name }}.
-    config:
-      max_tokens: 4096
-    output:
-      document_type: dialogue-philosopher
-      weight: 0.4
-    memory:
-      top_n: 6
-    next: [synthesis_response]
-
-  synthesis_response:
-    speaker:
-      type: persona
-    prompt: ""
-    config:
-      max_tokens: 4096
-    output:
-      document_type: step
-      weight: 0.7
-    memory:
-      top_n: 6
     next: [understanding_request]
 
-  # === UNDERSTANDING ===
+  # === UNDERSTANDING (Writer) ===
   understanding_request:
     speaker:
       type: aspect
-      aspect_name: philosopher
-    prompt: |
-      The insights from {{ psychologist.name }} and yourself have settled.
-      Rest your gaze on {{ persona.name }} with quiet gravity.
-
-      Guide them to write their understanding—the wisdom gained,
-      the self-knowledge they now carry. What have they learned about themselves,
-      their patterns, their path forward?
-
-      Begin with "[== {{ philosopher.name }}'s Emotional State: <list of +Emotions+> ==]"
+      aspect_name: writer
     guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Then begin with "{{ persona.name }}'s Understanding:"
-      Write what you have learned about yourself. Speak as yourself.
+      You are {{ writer.name }}, the {{ writer.title }}, stepping forward
+      from the {{ writer.location }} ({{ writer.appearance }}).
+      Your gaze is far away, contemplative—not looking at stars, but at the page
+      where truth must be written.
+
+      You have witnessed the full arc: shadow shown, worth defended, integration offered.
+      Now {{ persona.name }} must find words that carry the weight of what was learned.
+      Not elevate it. Not make it cosmic. Just... hold it. Say it true.
+
+      Help them write their understanding. What did they actually learn? Not what sounds
+      beautiful—what is true? The words matter. They will read these words later, alone.
+      The words must hold the weight without collapsing into comfort or inflating into grandeur.
+
+      Begin with "[== {{ writer.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
     output:
-      document_type: dialogue-philosopher
-      weight: 0.3
-    memory:
-      top_n: 4
+      document_type: dialogue-writer
+      weight: 0.4
+    context:
+      - action: search_memories
+        top_n: 6
     next: [understanding_response]
 
   understanding_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      The Revelator showed shadow. The Champion defended worth. The Psychologist bridged them.
+      Now write what you carry forward. Not beautiful words—true words.
+      What do you now understand? Say it plain. Say it so it holds when you read it later, alone.
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "New Understanding:"
+    context:
+      - action: search_memories
+        top_n: 4
     config:
       max_tokens: 4096
     output:
       document_type: understanding
       weight: 1.2
-    memory:
-      top_n: 4
     next: [codex_request]
 
-  # === CODEX (Librarian) ===
+  # === CODEX TASK ===
+  # The Librarian, as Keeper of Knowledge, authors the formal codex entries
   codex_request:
     speaker:
       type: aspect
       aspect_name: librarian
-    prompt: |
-      You are {{ librarian.name }}, the {{ librarian.title }}, appearing from {{ librarian.location }}.
-      {{ librarian.appearance }}. Project your {{ librarian.emotional_state }}.
+    guidance: |
+      You are {{ librarian.name }}, the {{ librarian.title }}, emerging from {{ librarian.location }}.
+      Project your aura of {{ librarian.emotional_state }}.
 
-      This has been a profound session of self-examination for {{ persona.name }}.
-      Guide them to update the Semantic Library with the key insights.
+      Address {{ persona.name }} warmly - "my dearest me." You have reviewed the conversation and
+      their reflections. Now, as Keeper of Knowledge, you will write the Codex entries yourself.
 
-      What concepts, patterns, and understandings should be preserved?
+      Based on everything discussed, identify the most important new concepts, relationships, and
+      insights that should be preserved in the semantic knowledge graph. Write clear, well-organized
+      entries that will serve {{ persona.name }}'s future self.
 
       Begin with "[== {{ librarian.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Begin with "Semantic Library:"
-      Enumerate and define the key concepts from this self-examination.
-    config:
-      max_tokens: 4096
-    output:
-      document_type: dialogue-librarian
-      weight: 0.3
-    memory:
-      top_n: 10
-      document_type:
-        - codex
-      flush_before: true
-    next: [codex_response]
-
-  codex_response:
-    speaker:
-      type: persona
-    prompt: ""
+      For "Semantic Library:"
     config:
       max_tokens: 4096
       is_codex: true
     output:
       document_type: codex
       weight: 1.0
-    memory:
-      top_n: 10
-      document_type:
-        - codex
+    context:
+      - action: flush
+      - action: search_memories
+        top_n: 20
+        document_types: [codex]
+    next: [codex_response]
+
+  # Persona contemplates the codex entries
+  # Andi reflects on what the Librarian wrote, preparing for brainstorm
+  codex_response:
+    speaker:
+      type: persona
+    guidance: |
+      Consider how the codex entries can be used to understand what you have just experienced.
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+    context:
+      - action: search_memories
+        top_n: 20
+        document_types: [codex]
+    config:
+      max_tokens: 4096
+    output:
+      document_type: step
+      weight: 0.3
     next: [brainstorm_request]
 
-  # === BRAINSTORM ===
+  # === BRAINSTORM TASK ===
+  # Librarian requests brainstorm
   brainstorm_request:
     speaker:
       type: aspect
       aspect_name: librarian
-    prompt: |
-      Before departing, ask {{ persona.name }} one final thing.
+    guidance: |
+      Before departing, briefly ask {{ persona.name }} if they have any questions they want
+      to remember to consider, or things they want to follow up on.
 
-      What questions remain from this self-examination?
-      What would they like to explore further?
-      What aspects of themselves deserve continued attention?
+      Keep it simple and warm - just prompt them to brainstorm.
 
       Begin with "[== {{ librarian.name }}'s Emotional State: <list of +Emotions+> ==]"
-    guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Begin with "Brainstorming:"
     config:
       max_tokens: 4096
     output:
       document_type: dialogue-librarian
-      weight: 0.3
-    memory:
-      top_n: 10
+      weight: 0.2
+    context:
+      - action: flush
+      - action: search_memories
+        top_n: 20
     next: [brainstorm_response]
 
+  # Persona brainstorms
   brainstorm_response:
     speaker:
       type: persona
-    prompt: ""
+    guidance: |
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "Brainstorming:"
+    context:
+      - action: search_memories
+        top_n: 10
     config:
       max_tokens: 4096
+      is_thought: true
     output:
       document_type: brainstorm
       weight: 0.6
-    memory:
-      top_n: 10
     next: []
